--- a/sass/component/_header.sass
+++ b/sass/component/_header.sass
@@ -2,6 +2,7 @@
 
 .header-container
   display: flex
+  justify-content: space-between
   width: 100%
   margin: auto $gutter-space
   padding: $gutter-space 0
