--- a/sass/component/_image.sass
+++ b/sass/component/_image.sass
@@ -1,4 +1,4 @@
-/* image.sass */
+/* image */
 
 // every other svg
 .sm-img
@@ -11,21 +11,23 @@
 .svg-facebook, .svg-google, .svg-twitter
   background-color: #8a68ab
   border-radius: 50%
+  padding: 10px
 
 .social-stat-container
   width: 90%
-  height: 150px
   background-color: $light-gray
   border-radius: 20px
   margin: $gutter-space auto
   display: flex
+  justify-content: space-evenly
+  padding: 3px
   & > .lg-img
     width: 80px
     height: 80px
-    margin: 35px $gutter-space
+    margin: 35px
   & > .social-stat-text-container
     float: right
-    margin: $gutter-space
+    margin: auto
 
 
 
